--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -33,7 +33,8 @@ rmd_files: ["index.Rmd",
     	    "80_training.Rmd",	    
 	    "95_resources.Rmd",
             # "96_function_reference.Rmd",
-            # "97_extra_materials.Rmd", # Test
+            "97_extra_materials.Rmd", 
+            # "97_interactive_3d_plots.Rmd",
 	    "90_acknowledgments.Rmd",
 	    "98_exercises.Rmd",
             "99_bibliography.Rmd"
