--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -33,8 +33,9 @@ rmd_files: ["index.Rmd",
     	    "80_training.Rmd",	    
 	    "95_resources.Rmd",
             # "96_function_reference.Rmd",
-            "97_extra_materials.Rmd", 
-            # "97_interactive_3d_plots.Rmd",
+            "97_extra_materials.Rmd",
+            "97_extra_materials_bayes",
+	    "97_interactive_3d_plots.Rmd",
 	    "90_acknowledgments.Rmd",
 	    "98_exercises.Rmd",
             "99_bibliography.Rmd"
