--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -34,7 +34,7 @@ rmd_files: ["index.Rmd",
 	    "95_resources.Rmd",
             # "96_function_reference.Rmd",
             "97_extra_materials.Rmd",
-            # "97_extra_materials_bayes.Rmd", # did not pass GHA
+            "97_extra_materials_bayes.Rmd",
 	    "97_interactive_3d_plots.Rmd",
 	    "90_acknowledgments.Rmd",
 	    "98_exercises.Rmd",
