--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -180,7 +180,8 @@ jobs:
       - name: Bookdown pdf
         if: runner.os == 'Linux'
         run: |
-          Rscript -e 'tinytex::reinstall_tinytex(repository = "illinois")'
+          # Rscript -e 'tinytex::reinstall_tinytex(repository = "illinois")'
+          Rscript -e 'tinytex::reinstall_tinytex()'  
           Rscript -e 'install.packages("webshot")'
           Rscript -e 'webshot::install_phantomjs()'
           Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::pdf_book")'
