try to fix tinytex

--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -177,6 +177,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::gitbook")'
+      - uses: r-lib/actions/setup-tinytex@v2	  
       - name: Bookdown pdf
         if: runner.os == 'Linux'
         run: |
