--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -177,10 +177,11 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::gitbook")'
+      - uses: r-lib/actions/setup-tinytex@v2	  
       - name: Bookdown pdf
         if: runner.os == 'Linux'
         run: |
-          Rscript -e 'tinytex::reinstall_tinytex(repository = "illinois")'
+          Rscript -e 'tinytex::reinstall_tinytex()'  
           Rscript -e 'install.packages("webshot")'
           Rscript -e 'webshot::install_phantomjs()'
           Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::pdf_book")'
