--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -134,6 +134,7 @@ jobs:
           ## Ideally, all dependencies should get installed in the first pass.
           # Remove when 0.60.1 available
           remotes::install_github("HenrikBengtsson/matrixStats", ref="develop")
+	  remotes::install_github("biobakery/Maaslin2")	  
           BiocManager::install("Cairo")
           BiocManager::install("biclust")
           BiocManager::install("cobiclust")
