--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -140,7 +140,8 @@ jobs:
           BiocManager::install("cobiclust")
           BiocManager::install("HDF5Array")
           BiocManager::install("fionarhuang/TreeSummarizedExperiment")
-          remotes::install_github("FrederickHuangLin/ANCOMBC")
+          # remotes::install_github("FrederickHuangLin/ANCOMBC")
+          BiocManager::install("ANCOMBC")	  	  
           BiocManager::install("microbiome/microbiomeDataSets")
           BiocManager::install("microbiome/miaTime")
           # Remove when available in docker
