--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -141,7 +141,8 @@ jobs:
           BiocManager::install("HDF5Array")
           BiocManager::install("fionarhuang/TreeSummarizedExperiment")
           # remotes::install_github("FrederickHuangLin/ANCOMBC")
-          BiocManager::install("ANCOMBC")	  	  
+          BiocManager::install("ANCOMBC")
+          BiocManager::install("checkmate")  
           BiocManager::install("microbiome/microbiomeDataSets")
           BiocManager::install("microbiome/miaTime")
           # Remove when available in docker
