--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -55,7 +55,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - { os: ubuntu-latest, r: '4.2', cont: "bioconductor/bioconductor_docker:RELEASE_3_15", rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest" }
+          - { os: ubuntu-latest, r: '4.3', cont: "bioconductor/bioconductor_docker:RELEASE_3_17", rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest" }
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
@@ -87,8 +87,8 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ${{ env.R_LIBS_USER }}
-          key: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_3_15-r-4.2-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_3_15-r-4.2-
+          key: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_3_17-r-4.3-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_3_17-r-4.3-
 
       - name: Install BiocManager
         run: |
@@ -98,7 +98,7 @@ jobs:
 
       - name: Set BiocVersion
         run: |
-          BiocManager::install(version = "3.15", ask = FALSE)
+          BiocManager::install(version = "3.17", ask = FALSE)
         shell: Rscript {0}
 
       - name: Cache R packages on Linux
@@ -106,8 +106,8 @@ jobs:
         uses: actions/cache@v1
         with:
           path: /home/runner/work/_temp/Library
-          key: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_3_15-r-4.2-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_3_15-r-4.2-
+          key: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_3_17-r-4.3-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ env.cache-version }}-${{ runner.os }}-biocversion-RELEASE_3_17-r-4.3-
 
       - name: Install Linux system dependencies
         if: runner.os == 'Linux'
@@ -134,12 +134,15 @@ jobs:
           ## Ideally, all dependencies should get installed in the first pass.
           # Remove when 0.60.1 available
           remotes::install_github("HenrikBengtsson/matrixStats", ref="develop")
+          remotes::install_github("biobakery/Maaslin2")  
           BiocManager::install("Cairo")
           BiocManager::install("biclust")
           BiocManager::install("cobiclust")
           BiocManager::install("HDF5Array")
           BiocManager::install("fionarhuang/TreeSummarizedExperiment")
-          remotes::install_github("FrederickHuangLin/ANCOMBC")
+          # remotes::install_github("FrederickHuangLin/ANCOMBC")
+          BiocManager::install("ANCOMBC")
+          BiocManager::install("checkmate")  
           BiocManager::install("microbiome/microbiomeDataSets")
           BiocManager::install("microbiome/miaTime")
           # Remove when available in docker
@@ -177,7 +180,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::gitbook")'
-      - uses: r-lib/actions/setup-tinytex@v2	  
+      - uses: r-lib/actions/setup-tinytex@v2  
       - name: Bookdown pdf
         if: runner.os == 'Linux'
         run: |
@@ -197,5 +200,5 @@ jobs:
         if: runner.os == 'Linux' && failure()
         uses: actions/upload-artifact@master
         with:
-          name: ${{ runner.os }}-biocversion-RELEASE_3_15-r-4.2-results
+          name: ${{ runner.os }}-biocversion-RELEASE_3_17-r-4.3-results
           path: docs
