--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -186,6 +186,7 @@ jobs:
         run: |
           Rscript -e 'tinytex::reinstall_tinytex()'  
           Rscript -e 'install.packages("webshot")'
+          Rscript -e 'install.packages("GUniFrac")'
           Rscript -e 'webshot::install_phantomjs()'
           Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::pdf_book")'
       - name: Bookdown Deploy
