--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -23,7 +23,7 @@ rmd_files: ["index.Rmd",
             "21_microbiome_community.Rmd",
             #"24_biclustering.Rmd",
             "24_clustering.Rmd",
-            "30_differential_abundance.Rmd",
+            #"30_differential_abundance.Rmd",
             "40_machine_learning.Rmd",
             "23_multi-assay_analyses.Rmd",
 	    "19_visualization_techniques.Rmd",
