--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -37,5 +37,7 @@ rmd_files: ["index.Rmd",
             # "96_function_reference.Rmd",
             "97_extra_materials.Rmd",
 	    "90_acknowledgments.Rmd",
-            "99_bibliography.Rmd"
+	    "Session_info.Rmd",
+      "99_bibliography.Rmd"
+            
 	    ]
