--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -135,6 +135,7 @@ jobs:
           # Remove when 0.60.1 available
           remotes::install_github("HenrikBengtsson/matrixStats", ref="develop")
           remotes::install_github("biobakery/Maaslin2")  
+          BiocManager::install("GUniFrac")
           BiocManager::install("Cairo")
           BiocManager::install("biclust")
           BiocManager::install("cobiclust")
@@ -186,7 +187,6 @@ jobs:
         run: |
           Rscript -e 'tinytex::reinstall_tinytex()'  
           Rscript -e 'install.packages("webshot")'
-          Rscript -e 'install.packages("GUniFrac")'
           Rscript -e 'webshot::install_phantomjs()'
           Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::pdf_book")'
       - name: Bookdown Deploy
