--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -158,6 +158,7 @@ jobs:
           ## For running the checks
           message(paste('****', Sys.time(), 'installing rcmdcheck and BiocCheck ****'))
           remotes::install_cran("rcmdcheck")
+          remotes::install_cran("MLeval")
           BiocManager::install("BiocCheck")
           BiocManager::install("GUniFrac")
         shell: Rscript {0}
@@ -188,7 +189,6 @@ jobs:
         run: |
           Rscript -e 'tinytex::reinstall_tinytex()'  
           Rscript -e 'install.packages("webshot")'
-          Rscript -e 'install.packages("MLeval")'
           Rscript -e 'webshot::install_phantomjs()'
           Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::pdf_book")'
       - name: Bookdown Deploy
