--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -136,6 +136,7 @@ jobs:
           remotes::install_github("HenrikBengtsson/matrixStats", ref="develop")
           remotes::install_github("biobakery/Maaslin2")
           remotes::install_github("SchlossLab/mikRopML")
+          remotes::install_github("jsilve24/fido")
           BiocManager::install("Cairo")
           BiocManager::install("biclust")
           BiocManager::install("cobiclust")
