--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -162,6 +162,7 @@ jobs:
           remotes::install_cran("MLeval")
           BiocManager::install("BiocCheck")
           BiocManager::install("GUniFrac")
+          BiocManager::install("rgl") 
         shell: Rscript {0}
 
       - name: Session info
