--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -135,7 +135,7 @@ jobs:
           # Remove when 0.60.1 available
           remotes::install_github("HenrikBengtsson/matrixStats", ref="develop")
           remotes::install_github("biobakery/Maaslin2")
-          remotes::install_github("SchlossLab/mikRopML")
+          remotes::install_github("SchlossLab/mikropml")
           remotes::install_github("jsilve24/fido")
           BiocManager::install("Cairo")
           BiocManager::install("biclust")
