--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,15 +33,18 @@ Suggests:
     benchdamic,
     bookdown,
     curatedMetagenomicData,
+    fido,
     ggpubr,
     kableExtra,
     knitr,
     Maaslin2,
+    matrixStats,
     mia,
     miaViz,
     MicrobiotaProcess,
     MicrobiomeStat,
     microbiomeDataSets,
+    mikropml,
     patchwork,
     philr,
     picante,    
@@ -60,6 +63,11 @@ Remotes:
     github::microbiome/mia,
     github::microbiome/miaViz,
     github::microbiome/miaSim,        
-    github::microbiome/miaTime
+    github::microbiome/miaTime,
+    github::HenrikBengtsson/matrixStats",
+    github::biobakery/Maaslin2
+    github::SchlossLab/mikropml
+    github::jsilve24/fido
+    
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
