--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -65,9 +65,9 @@ Remotes:
     github::microbiome/miaSim,        
     github::microbiome/miaTime,
     github::HenrikBengtsson/matrixStats",
-    github::biobakery/Maaslin2
-    github::SchlossLab/mikropml
-    github::jsilve24/fido
+    github::biobakery/Maaslin2,
+    github::SchlossLab/mikropml,
+    github::jsilve24/fido,
     
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
