--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -64,7 +64,7 @@ Remotes:
     github::microbiome/miaViz,
     github::microbiome/miaSim,        
     github::microbiome/miaTime,
-    github::HenrikBengtsson/matrixStats",
+    github::HenrikBengtsson/matrixStats,
     github::biobakery/Maaslin2,
     github::SchlossLab/mikropml,
     github::jsilve24/fido
