--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -133,19 +133,19 @@ jobs:
           ## https://github.com/r-lib/remotes/issues/296
           ## Ideally, all dependencies should get installed in the first pass.
           # Remove when 0.60.1 available
-          BiocManager::install("Cairo")
-          BiocManager::install("biclust")
-          BiocManager::install("cobiclust")
-          BiocManager::install("HDF5Array")
-          BiocManager::install("fionarhuang/TreeSummarizedExperiment")
+          ## BiocManager::install("Cairo")
+          ## BiocManager::install("biclust")
+          ## BiocManager::install("cobiclust")
+          ## BiocManager::install("HDF5Array")
+          ## BiocManager::install("fionarhuang/TreeSummarizedExperiment")
           # remotes::install_github("FrederickHuangLin/ANCOMBC")
-          BiocManager::install("ANCOMBC")
-          BiocManager::install("checkmate")  
-          BiocManager::install("microbiome/microbiomeDataSets")
-          BiocManager::install("microbiome/miaTime")
+          ## BiocManager::install("ANCOMBC")
+          ## BiocManager::install("checkmate")  
+          ##BiocManager::install("microbiome/microbiomeDataSets")
+          ## BiocManager::install("microbiome/miaTime")
           # Remove when available in docker
-          BiocManager::install("curatedMetagenomicData")
-          BiocManager::install("sechm")
+          ## BiocManager::install("curatedMetagenomicData")
+          ## BiocManager::install("sechm")
           ## Pass #1 at installing dependencies
           message(paste('****', Sys.time(), 'pass number 1 at installing dependencies: local dependencies ****'))
           remotes::install_local(dependencies = TRUE, repos = BiocManager::repositories(), build_vignettes = FALSE, upgrade = TRUE, force=TRUE)
@@ -154,11 +154,11 @@ jobs:
           remotes::install_local(dependencies = TRUE, repos = BiocManager::repositories(), build_vignettes = FALSE, upgrade = TRUE, force=TRUE)
           ## For running the checks
           message(paste('****', Sys.time(), 'installing rcmdcheck and BiocCheck ****'))
-          remotes::install_cran("rcmdcheck")
-          remotes::install_cran("MLeval")
-          BiocManager::install("BiocCheck")
-          BiocManager::install("GUniFrac")
-          BiocManager::install("rgl") 
+          ## remotes::install_cran("rcmdcheck")
+          ## remotes::install_cran("MLeval")
+          ## BiocManager::install("BiocCheck")
+          ## BiocManager::install("GUniFrac")
+          ## BiocManager::install("rgl") 
         shell: Rscript {0}
 
       - name: Session info
