--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,6 +60,21 @@ Suggests:
     uwot,
     phyloseq
 Remotes:
+    BiocManager::ANCOMBC
+    BiocManager::biclust
+    BiocManager::Cairo
+    BiocManager::checkmate
+    BiocManager::cobiclust
+    BiocManager::BiocCheck
+    BiocManager::GUniFrac
+    BiocManager::sechm
+    BiocManager::curatedMetagenomicData
+    BiocManager::microbiome/microbiomeDataSets
+    BiocManager::fionarhuang/TreeSummarizedExperiment
+    BiocManager::HDF5Array
+    BiocManager::rgl
+    cran::MLeval
+    cran::rcmdcheck
     github::microbiome/mia,
     github::microbiome/miaViz,
     github::microbiome/miaSim,        
@@ -67,6 +82,6 @@ Remotes:
     github::HenrikBengtsson/matrixStats,
     github::biobakery/Maaslin2,
     github::SchlossLab/mikropml,
-    github::jsilve24/fido 
+    github::jsilve24/fido    
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
