--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,21 +60,21 @@ Suggests:
     uwot,
     phyloseq
 Remotes:
-    BiocManager::ANCOMBC,
-    BiocManager::biclust,
-    BiocManager::Cairo,
-    BiocManager::checkmate,
-    BiocManager::cobiclust,
-    BiocManager::BiocCheck,
-    BiocManager::GUniFrac,
-    BiocManager::sechm,
-    BiocManager::curatedMetagenomicData,
-    BiocManager::microbiome/microbiomeDataSets,
-    BiocManager::fionarhuang/TreeSummarizedExperiment,
-    BiocManager::HDF5Array,
-    BiocManager::rgl,
-    cran::MLeval,
-    cran::rcmdcheck,
+    github::ANCOMBC,
+    github::biclust,
+    github::Cairo,
+    github::checkmate,
+    github::cobiclust,
+    github::BiocCheck,
+    github::GUniFrac,
+    github::sechm,
+    github::curatedMetagenomicData,
+    github::microbiome/microbiomeDataSets,
+    github::fionarhuang/TreeSummarizedExperiment,
+    github::HDF5Array,
+    github::rgl,
+    github::MLeval,
+    github::rcmdcheck,
     github::microbiome/mia,
     github::microbiome/miaViz,
     github::microbiome/miaSim,        
