--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,21 +60,21 @@ Suggests:
     uwot,
     phyloseq
 Remotes:
-    github::ANCOMBC,
-    github::biclust,
-    github::Cairo,
-    github::checkmate,
-    github::cobiclust,
-    github::BiocCheck,
-    github::GUniFrac,
-    github::sechm,
-    github::curatedMetagenomicData,
-    github::microbiome/microbiomeDataSets,
-    github::fionarhuang/TreeSummarizedExperiment,
-    github::HDF5Array,
-    github::rgl,
-    github::MLeval,
-    github::rcmdcheck,
+    bioc::ANCOMBC,
+    bioc::biclust,
+    bioc::Cairo,
+    bioc::checkmate,
+    bioc::cobiclust,
+    bioc::BiocCheck,
+    bioc::GUniFrac,
+    bioc::sechm,
+    bioc::curatedMetagenomicData,
+    bioc::microbiome/microbiomeDataSets,
+    bioc::fionarhuang/TreeSummarizedExperiment,
+    bioc::HDF5Array,
+    bioc::rgl,
+    cran::MLeval,
+    cran::rcmdcheck,
     github::microbiome/mia,
     github::microbiome/miaViz,
     github::microbiome/miaSim,        
