--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -69,12 +69,12 @@ Remotes:
     bioc::GUniFrac,
     bioc::sechm,
     bioc::curatedMetagenomicData,
-    bioc::microbiome/microbiomeDataSets,
     bioc::fionarhuang/TreeSummarizedExperiment,
     bioc::HDF5Array,
     bioc::rgl,
     cran::MLeval,
     cran::rcmdcheck,
+    github::microbiome/microbiomeDataSets,
     github::microbiome/mia,
     github::microbiome/miaViz,
     github::microbiome/miaSim,        
