--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,10 +31,12 @@ Suggests:
     ALDEx2,
     ANCOMBC,
     benchdamic,
+    BiocCheck,
     bookdown,
     curatedMetagenomicData,
     fido,
     ggpubr,
+    HDF5Array,
     kableExtra,
     knitr,
     Maaslin2,
@@ -54,23 +56,19 @@ Suggests:
     scater,
     scuttle,
     scran,
+    sechm,
     tidyverse,
     tidySummarizedExperiment,
     TreeSummarizedExperiment,
     uwot,
     phyloseq
 Remotes:
-    bioc::ANCOMBC,
-    bioc::biclust,
-    bioc::Cairo,
-    bioc::checkmate,
-    bioc::cobiclust,
-    bioc::BiocCheck,
-    bioc::GUniFrac,
-    bioc::sechm,
-    bioc::curatedMetagenomicData,
-    bioc::HDF5Array,
-    bioc::rgl,
+    cran::Cairo,
+    cran::checkmate,
+    cran::cobiclust,
+    cran::GUniFrac,
+    cran::rgl,
+    cran::biclust,
     cran::MLeval,
     cran::rcmdcheck,
     github::microbiome/microbiomeDataSets,
