issues#99,#100,#101,#238,#242,info section (#267)
* my changes

* my changes

* my changes

* my new changes

* Update 04_containers.Rmd

* Update 20_beta_diversity.Rmd

* Update 23_multi-assay_analyses.Rmd

* Update 24_clustering.Rmd

* Update 19_visualization_techniques.Rmd

* Update 24_biclustering.Rmd

* Update 24_clustering.Rmd

* Update 24_biclustering.Rmd

* Update 22_communitytyping.Rmd

* Update 24_biclustering.Rmd

* Update build-book-release.yml

* Update build-book-release.yml

* Update _bookdown.yml

* Update _bookdown.yml

* Update build-book-release.yml

* Update build-book-release.yml

* Update build-book-release.yml

* Update build-book-release.yml

* Update build-book-release.yml

* Update _bookdown.yml

tab issues fixed

* Update .gitignore

Added *.Rproj to  ~/.gitignore

* Update build-book-release.yml

 changed remotes::install_github("SchlossLab/mikRopML") to remotes::install_github("SchlossLab/mikropml")

* Update DESCRIPTION

move some into DESCRIPTION file

* Update build-book-release.yml

move some  into DESCRIPTION file

* Update DESCRIPTION

* Update DESCRIPTION

* Update DESCRIPTION

* Update DESCRIPTION

* Delete OMA.Rproj

deletion of OMA.Rproj

* Update build-book-release.yml

removed some tasks for test

* Update DESCRIPTION

Addition of some remote commands

* Update DESCRIPTION

* Update DESCRIPTION

* Update DESCRIPTION

* Update DESCRIPTION

* Update DESCRIPTION

* Update DESCRIPTION

* Update .gitignore

--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -133,21 +133,19 @@ jobs:
           ## https://github.com/r-lib/remotes/issues/296
           ## Ideally, all dependencies should get installed in the first pass.
           # Remove when 0.60.1 available
-          remotes::install_github("HenrikBengtsson/matrixStats", ref="develop")
-          remotes::install_github("biobakery/Maaslin2")  
-          BiocManager::install("Cairo")
-          BiocManager::install("biclust")
-          BiocManager::install("cobiclust")
-          BiocManager::install("HDF5Array")
-          BiocManager::install("fionarhuang/TreeSummarizedExperiment")
+          ## BiocManager::install("Cairo")
+          ## BiocManager::install("biclust")
+          ## BiocManager::install("cobiclust")
+          ## BiocManager::install("HDF5Array")
+          ## BiocManager::install("fionarhuang/TreeSummarizedExperiment")
           # remotes::install_github("FrederickHuangLin/ANCOMBC")
-          BiocManager::install("ANCOMBC")
-          BiocManager::install("checkmate")  
-          BiocManager::install("microbiome/microbiomeDataSets")
-          BiocManager::install("microbiome/miaTime")
+          ## BiocManager::install("ANCOMBC")
+          ## BiocManager::install("checkmate")  
+          ##BiocManager::install("microbiome/microbiomeDataSets")
+          ## BiocManager::install("microbiome/miaTime")
           # Remove when available in docker
-          BiocManager::install("curatedMetagenomicData")
-          BiocManager::install("sechm")
+          ## BiocManager::install("curatedMetagenomicData")
+          ## BiocManager::install("sechm")
           ## Pass #1 at installing dependencies
           message(paste('****', Sys.time(), 'pass number 1 at installing dependencies: local dependencies ****'))
           remotes::install_local(dependencies = TRUE, repos = BiocManager::repositories(), build_vignettes = FALSE, upgrade = TRUE, force=TRUE)
@@ -156,8 +154,11 @@ jobs:
           remotes::install_local(dependencies = TRUE, repos = BiocManager::repositories(), build_vignettes = FALSE, upgrade = TRUE, force=TRUE)
           ## For running the checks
           message(paste('****', Sys.time(), 'installing rcmdcheck and BiocCheck ****'))
-          remotes::install_cran("rcmdcheck")
-          BiocManager::install("BiocCheck")
+          ## remotes::install_cran("rcmdcheck")
+          ## remotes::install_cran("MLeval")
+          ## BiocManager::install("BiocCheck")
+          ## BiocManager::install("GUniFrac")
+          ## BiocManager::install("rgl") 
         shell: Rscript {0}
 
       - name: Session info
@@ -186,7 +187,6 @@ jobs:
         run: |
           Rscript -e 'tinytex::reinstall_tinytex()'  
           Rscript -e 'install.packages("webshot")'
-          Rscript -e 'install.packages("GUniFrac")'
           Rscript -e 'webshot::install_phantomjs()'
           Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::pdf_book")'
       - name: Bookdown Deploy
