--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,17 +31,22 @@ Suggests:
     ALDEx2,
     ANCOMBC,
     benchdamic,
+    BiocCheck,
     bookdown,
     curatedMetagenomicData,
+    fido,
     ggpubr,
+    HDF5Array,
     kableExtra,
     knitr,
     Maaslin2,
+    matrixStats,
     mia,
     miaViz,
     MicrobiotaProcess,
     MicrobiomeStat,
     microbiomeDataSets,
+    mikropml,
     patchwork,
     philr,
     picante,    
@@ -51,15 +56,29 @@ Suggests:
     scater,
     scuttle,
     scran,
+    sechm,
     tidyverse,
     tidySummarizedExperiment,
     TreeSummarizedExperiment,
     uwot,
     phyloseq
 Remotes:
+    cran::Cairo,
+    cran::checkmate,
+    cran::cobiclust,
+    cran::GUniFrac,
+    cran::rgl,
+    cran::biclust,
+    cran::MLeval,
+    cran::rcmdcheck,
+    github::microbiome/microbiomeDataSets,
     github::microbiome/mia,
     github::microbiome/miaViz,
     github::microbiome/miaSim,        
-    github::microbiome/miaTime
+    github::microbiome/miaTime,
+    github::HenrikBengtsson/matrixStats,
+    github::biobakery/Maaslin2,
+    github::SchlossLab/mikropml,
+    github::jsilve24/fido    
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
