Updated DMM and bluster dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -80,5 +80,6 @@ Remotes:
     github::biobakery/Maaslin2,
     github::SchlossLab/mikropml,
     github::jsilve24/fido    
+    github::LTLA/bluster
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
