--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -79,7 +79,7 @@ Remotes:
     github::HenrikBengtsson/matrixStats,
     github::biobakery/Maaslin2,
     github::SchlossLab/mikropml,
-    github::jsilve24/fido    
+    github::jsilve24/fido,
     github::LTLA/bluster
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
