Forced bluster detach

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -79,7 +79,6 @@ Remotes:
     github::HenrikBengtsson/matrixStats,
     github::biobakery/Maaslin2,
     github::SchlossLab/mikropml,
-    github::jsilve24/fido,
-    github::LTLA/bluster
+    github::jsilve24/fido
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
