--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -159,6 +159,7 @@ jobs:
           ## BiocManager::install("BiocCheck")
           ## BiocManager::install("GUniFrac")
           ## BiocManager::install("rgl") 
+          ## BiocManager::install("LTLA/bluster")
         shell: Rscript {0}
 
       - name: Session info
