--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -146,6 +146,7 @@ jobs:
           # Remove when available in docker
           ## BiocManager::install("curatedMetagenomicData")
           ## BiocManager::install("sechm")
+          ## BiocManager::install("LTLA/bluster", force = T)
           ## Pass #1 at installing dependencies
           message(paste('****', Sys.time(), 'pass number 1 at installing dependencies: local dependencies ****'))
           remotes::install_local(dependencies = TRUE, repos = BiocManager::repositories(), build_vignettes = FALSE, upgrade = TRUE, force=TRUE)
@@ -159,7 +160,6 @@ jobs:
           ## BiocManager::install("BiocCheck")
           ## BiocManager::install("GUniFrac")
           ## BiocManager::install("rgl") 
-          ## BiocManager::install("LTLA/bluster")
         shell: Rscript {0}
 
       - name: Session info
