--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -134,6 +134,7 @@ jobs:
           ## Ideally, all dependencies should get installed in the first pass.
           # Remove when 0.60.1 available
           ## BiocManager::install("Cairo")
+          remotes::install_github("LTLA/bluster")
           ## BiocManager::install("biclust")
           ## BiocManager::install("cobiclust")
           ## BiocManager::install("HDF5Array")
@@ -146,7 +147,6 @@ jobs:
           # Remove when available in docker
           ## BiocManager::install("curatedMetagenomicData")
           ## BiocManager::install("sechm")
-          ## BiocManager::install("LTLA/bluster", force = T)
           ## Pass #1 at installing dependencies
           message(paste('****', Sys.time(), 'pass number 1 at installing dependencies: local dependencies ****'))
           remotes::install_local(dependencies = TRUE, repos = BiocManager::repositories(), build_vignettes = FALSE, upgrade = TRUE, force=TRUE)
