--- a/_output.yml
+++ b/_output.yml
@@ -9,6 +9,9 @@ bookdown::gitbook:
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     download: ["pdf"]
+    edit: https://github.com/microbiome/OMA/blob/master/%s
+    history: https://github.com/microbiome/OMA/commits/master/%s
+    view: https://github.com/microbiome/OMA/blob/master/%s
     sharing:
       github: yes
       twitter: yes
