Add section on network learning

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -21,6 +21,7 @@ rmd_files: ["index.Rmd",
             "40_machine_learning.Rmd",
             "23_multi-assay_analyses.Rmd",
             "19_visualization_techniques.Rmd",
+            "60_networks.Rmd",
             "80_training.Rmd",
             "95_resources.Rmd",
             "98_exercises.Rmd",
