--- a/_output.yml
+++ b/_output.yml
@@ -5,7 +5,7 @@ bookdown::gitbook:
       theme: white
     toc:
       before: |
-        <li><a href="./">Orchestrating Microbiome Analysis</a></li>
+        <li><a href="./">Orchestrating Microbiome Analysis with Bioconductor</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     download: ["pdf"]
