removed bluster from suggests and added remote install in buildbook

--- a/.github/workflows/build-book-release.yml
+++ b/.github/workflows/build-book-release.yml
@@ -126,6 +126,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          BiocManager::install("LTLA/bluster")
           ## Try installing the package dependencies in steps. First the local
           ## dependencies, then any remaining dependencies to avoid the
           ## issues described at
