update to contributors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: OMA
 Title: Orchestrating Microbiome Analysis with Bioconductor
-Version: 0.98.15
+Version: 0.98.16
 Date: 2023-07-29
 Authors@R: 
     c(person("Leo", "Lahti", role = c("aut"),
@@ -10,11 +10,13 @@ Authors@R:
              comment = c(ORCID = "0000-0002-8563-8884")),
       person("Felix GM", "Ernst", email = "felix.gm.ernst@outlook.com",
              role = c("aut"),
-             comment = c(ORCID = "0000-0001-5064-0928"))
+             comment = c(ORCID = "0000-0001-5064-0928")),
+      person("and others", "(see the full list of contributors)", 
+             role = c("ctb"))
 	     )
 Description:
-    This is a reference cookbook for performing **Microbiome Analysis** with 
-    Bioconductor in R.
+    This is a reference cookbook for **Microbiome Data Science** with 
+    R and Bioconductor.
 License: CC BY-NC-SA 3.0 US
 Encoding: UTF-8
 URL: https://github.com/microbiome/OMA
