--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,7 @@ Suggests:
     matrixStats,
     mia,
     miaViz,
+    miaTime,
     MicrobiotaProcess,
     MicrobiomeStat,
     microbiomeDataSets,
