Add other missing deps

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,9 @@ Suggests:
     ANCOMBC,
     benchdamic,
     BiocCheck,
+    biclust,
     bookdown,
+    cobiclust,
     curatedMetagenomicData,
     dendextend,
     fido,
@@ -46,7 +48,9 @@ Suggests:
     MicrobiomeStat,
     microbiomeDataSets,
     mikropml,
+    Nbclust,
     patchwork,
+    pheatmap,
     philr,
     picante,    
     rebook,
