--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,7 @@ Suggests:
     MicrobiomeStat,
     microbiomeDataSets,
     mikropml,
-    Nbclust,
+    NbClust,
     patchwork,
     pheatmap,
     philr,
