Add multiassay analyses deps

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,12 +48,14 @@ Suggests:
     MicrobiomeStat,
     microbiomeDataSets,
     mikropml,
+    MOFA2,
     NbClust,
     patchwork,
     pheatmap,
     philr,
     picante,    
     rebook,
+    reticulate,
     rmarkdown,
     Rtsne,
     scater,
