Add deps for extra materials

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,7 @@ Suggests:
     cobiclust,
     curatedMetagenomicData,
     dendextend,
+    DT,
     fido,
     ggpubr,
     HDF5Array,
@@ -53,8 +54,10 @@ Suggests:
     patchwork,
     pheatmap,
     philr,
-    picante,    
+    picante, 
+    plotly,
     rebook,
+    rgl,
     rmarkdown,
     Rtsne,
     scater,
