--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -18,10 +18,10 @@ rmd_files: ["index.Rmd",
             "21_microbiome_community.Rmd",
             "24_clustering.Rmd",
             "30_differential_abundance.Rmd",
+            "60_network_learning.Rmd",
             "40_machine_learning.Rmd",
             "23_multi-assay_analyses.Rmd",
             "19_visualization_techniques.Rmd",
-            "60_networks.Rmd",
             "80_training.Rmd",
             "95_resources.Rmd",
             "98_exercises.Rmd",
