--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -19,6 +19,7 @@ rmd_files: ["index.Rmd",
             "24_clustering.Rmd",
             "30_differential_abundance.Rmd",
             "60_network_learning.Rmd",
+            "61_network_comparison.Rmd",
             "40_machine_learning.Rmd",
             "23_multi-assay_analyses.Rmd",
             "19_visualization_techniques.Rmd",
