Add plotRDA function to beta diversity chapter (#343)
* Add link to benchmarking and minor polish

* Simplify section on supervised ordination

* Add clarifications to DAA with confounding

* Fix beta diversity bug

* Minor change

* Add exercise on DAA method comparison

* Minor fix

* Minor fix

* Streamline RDA section with new plotRDA function

* Fix rmd table in beta diversity chapter

* Fix miaTime missing error

* Fix miaTime missing error

* Add dendextend to DESCRIPTION

* Add other missing deps

* Fix dep names

* Add multiassay analyses deps

* Remove reticulate from deps

* Add deps for extra materials

* Improve PCoA example

* Fix deployment

* Implement pseudocount = TRUE and minor fixes

* Update 30_differential_abundance (#348)

* Replace pseudocount 1 with TRUE throughout book

* Add table of typical beta div combinations

* Fix pseudocount bug

* Update beta diversity table

---------

Co-authored-by: Elina297 <125908303+Elina297@users.noreply.github.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,8 +29,12 @@ Suggests:
     ANCOMBC,
     benchdamic,
     BiocCheck,
+    biclust,
     bookdown,
+    cobiclust,
     curatedMetagenomicData,
+    dendextend,
+    DT,
     fido,
     ggpubr,
     HDF5Array,
@@ -40,14 +44,20 @@ Suggests:
     matrixStats,
     mia,
     miaViz,
+    miaTime,
     MicrobiotaProcess,
     MicrobiomeStat,
     microbiomeDataSets,
     mikropml,
+    MOFA2,
+    NbClust,
     patchwork,
+    pheatmap,
     philr,
-    picante,    
+    picante, 
+    plotly,
     rebook,
+    rgl,
     rmarkdown,
     Rtsne,
     scater,
