--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -27,8 +27,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-          
-    
+
       - uses: quarto-dev/quarto-actions/setup@v2
           
       - uses: r-lib/actions/setup-r-dependencies@v2
@@ -42,15 +41,9 @@ jobs:
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
-          path: inst/examples
+          path: _book
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name : Import CSV visualiser
-        run : cp -r inst/examples/dataTable inst/examples/_book/
-
-      - name : Import output.tables
-        run : cp -r inst/examples/output.tables inst/examples/_book/
         
       - name: Deploy package
         run: |
@@ -60,11 +53,3 @@ jobs:
           git commit -m "Re-render bookdown documents" || echo "No changes to commit"
           git push origin || echo "No changes to commit"
 
-      - name: Trigger link checker workflow
-        if: success()
-        uses: peter-evans/repository-dispatch@v1
-        with:
-          token: ${{ secrets.REPO_GHA_PAT }}
-          repository: ${{ github.repository }}
-          event-type: trigger-link-check-workflow
-          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
