--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -1,51 +1,46 @@
-# Workflow derived from https://github.com/r-lib/actions/tree/master/examples
-# Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
-# Workflow triggering derived from: https://stevenmortimer.com/running-github-actions-sequentially/
+name: renderbook-quarto
+
 on:
   push:
-    branches: 
-    - master
-    paths:
-    - inst/examples
-    - '**.Rmd'
-  workflow_dispatch:
-permissions: write-all
-
-name: renderbook-quarto
+    branches:
+      - main  # Adjust this to your repository's main branch
 
 jobs:
   render-book:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Check Out Repository
+        uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-pandoc@v2
-
-      - uses: r-lib/actions/setup-r@v2
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
 
-      - uses: quarto-dev/quarto-actions/setup@v2
-          
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          needs: website
-          extra-packages:
-            any::devtools
-            local::.
+      - name: Install Dependencies
+        run: |
+          # Install 'rebook' package if it's required
+          if ! R -e "library('rebook', logical.return = TRUE)" ; then
+            R -e "install.packages('rebook')"
+          fi
+        shell: Rscript {0}
 
-      - name: Render and Publish quarto
+      - name: Set up Pandoc
+        uses: r-lib/actions/setup-pandoc@v2
+
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+
+      - name: Render and Publish Quarto
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
           path: _book
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
-      - name: Deploy package
+
+      - name: Deploy Package
         run: |
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
