--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -29,12 +29,17 @@ jobs:
       - uses: quarto-dev/quarto-actions/setup@v2
           
       - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          needs: website
+          extra-packages:
+            any::devtools
+            local::.      
 
       - name: Render and Publish quarto
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
-          path: book
+          path: _book
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
