--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -39,7 +39,7 @@ jobs:
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
-          path: _book
+          path: book
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
