--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,11 +28,11 @@ book:
   - 04_containers.qmd
   - 10_manipulation.qmd
   - 12_quality_control.qmd
-  #- 11_taxonomic_information.qmd
+  - 11_taxonomic_information.qmd
   - 14_alpha_diversity.qmd
   - 20_beta_diversity.qmd
   - 21_microbiome_community.qmd
-  #- 24_clustering.qmd
+  - 24_clustering.qmd
   - 30_differential_abundance.qmd
   - 40_machine_learning.qmd
   - 23_multi-assay_analyses.Rmd
