--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -1,10 +1,10 @@
 on:
   push:
-    branches: 
-    - master
+    branches:
+      - master
     paths:
-    - inst/examples
-    - '**.Rmd'
+      - '**.qmd'
+      - '**.Rmd'
   workflow_dispatch:
 permissions: write-all
 
