--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -30,7 +30,9 @@ jobs:
           
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          needs: website    
+          r-remotes: |
+                https://bioconductor.org/packages/3.13/bioc/src/contrib/bluster_1.11.4.tar.gz
+        
 
       - name: Render and Publish quarto
         uses: quarto-dev/quarto-actions/publish@v2
