--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -29,10 +29,9 @@ jobs:
       - uses: quarto-dev/quarto-actions/setup@v2
           
       - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          r-remotes: |
-                https://bioconductor.org/packages/3.13/bioc/src/contrib/bluster_1.11.4.tar.gz
         
+      - name: Install "bluster" Package
+        run: Rscript -e 'remotes::install_version("bluster", version = "1.11.4")'
 
       - name: Render and Publish quarto
         uses: quarto-dev/quarto-actions/publish@v2
