--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -30,6 +30,9 @@ jobs:
           
       - uses: r-lib/actions/setup-r-dependencies@v2
         
+      - name: Install remotes Package
+        run: Rscript -e 'install.packages("remotes")'
+        
       - name: Install "bluster" Package
         run: Rscript -e 'remotes::install_version("bluster", version = "1.11.4")'
 
