--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -34,7 +34,8 @@ jobs:
         run: Rscript -e 'install.packages("remotes")'
         
       - name: Install "bluster" Package
-        run: Rscript -e 'remotes::install_version("bluster", version = "1.11.4")'
+        run: Rscript -e 'BiocManager::install(version = "3.13", ask = FALSE); BiocManager::install("bluster", version = "1.11.4")'
+
 
       - name: Render and Publish quarto
         uses: quarto-dev/quarto-actions/publish@v2
