--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -30,11 +30,9 @@ jobs:
           
       - uses: r-lib/actions/setup-r-dependencies@v2
         
-      - name: Install remotes Package
-        run: Rscript -e 'install.packages("remotes")'
         
       - name: Install "bluster" Package
-        run: Rscript -e 'BiocManager::install(version = "3.17", ask = FALSE); BiocManager::install("bluster", version = "1.11.4")'
+        run: Rscript -e 'BiocManager::install(version = "3.17", ask = FALSE); BiocManager::install("bluster")'
 
 
       - name: Render and Publish quarto
