--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -32,8 +32,9 @@ jobs:
         
         
       - name: Install "bluster" Package
-        run: Rscript -e 'BiocManager::install(version = "3.17", ask = FALSE); BiocManager::install("bluster")'
-
+        run: |
+          Rscript -e 'install.packages("devtools")'
+          Rscript -e 'library(devtools); devtools::install_local("packages/bluster_1.11.4.tar.gz")'
 
       - name: Render and Publish quarto
         uses: quarto-dev/quarto-actions/publish@v2
