--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -30,12 +30,9 @@ jobs:
           
       - uses: r-lib/actions/setup-r-dependencies@v2
         
-        
-      - name: Install "bluster" Package
-        run: |
-          Rscript -e 'install.packages("devtools")'
-          Rscript -e 'library(devtools); devtools::install_local("packages/bluster_1.11.4.tar.gz")'
-
+      - name: Install "bluster" Package from Bioconductor 'devel'
+        run: Rscript -e 'install.packages("BiocManager"); BiocManager::install(version = "devel", ask = FALSE); BiocManager::install("bluster")'  
+      
       - name: Render and Publish quarto
         uses: quarto-dev/quarto-actions/publish@v2
         with:
