--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -30,6 +30,9 @@ jobs:
           
       - uses: r-lib/actions/setup-r-dependencies@v2
         
+      - name: Install remotes Package
+        run: Rscript -e 'install.packages("remotes")'
+        
       - name: Install "bluster" Package from Bioconductor 'devel'
         run: Rscript -e 'install.packages("BiocManager"); BiocManager::install(version = "devel", ask = FALSE); BiocManager::install("bluster")'  
       
