--- a/.github/workflows/quarto.yml
+++ b/.github/workflows/quarto.yml
@@ -33,9 +33,11 @@ jobs:
       - name: Install remotes Package
         run: Rscript -e 'install.packages("remotes")'
         
-      - name: Install "bluster" Package from Bioconductor 'devel'
-        run: Rscript -e 'install.packages("BiocManager"); BiocManager::install(version = "devel", ask = FALSE); BiocManager::install("bluster")'  
-      
+      - name: Install BiocManager and bluster with Bioconductor version 3.18
+        run: |
+          Rscript -e 'install.packages("BiocManager"); BiocManager::install(version = "3.18", ask = FALSE)'
+          Rscript -e 'BiocManager::install("bluster")'
+        
       - name: Render and Publish quarto
         uses: quarto-dev/quarto-actions/publish@v2
         with:
