biocbook: update package files

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,10 @@
+^inst/\.quarto$
+^\.png$
+^\.quarto$
+^\.github$
+^LICENSE\.md$
+^NOTES\.md$
+^README\.Rmd$
+^Dockerfile$
 ^.*\.Rproj$
 ^\.Rproj\.user$
