--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,75 +17,69 @@ Authors@R:
 Description:
     This is a reference cookbook for **Microbiome Data Science** with 
     R and Bioconductor.
-License: CC BY-NC-SA 3.0 US
+License: CC BY-NC-SA 4.0
 Encoding: UTF-8
 URL: https://github.com/microbiome/OMA
 BugReports: https://github.com/microbiome/OMA/issues
 LazyData: true
 biocViews:
     Book
+Depends:
+    R (>= 4.0.0)
 Suggests:
-    ALDEx2,
-    ANCOMBC,
-    benchdamic,
-    BiocCheck,
-    biclust,
-    bookdown,
-    cobiclust,
-    curatedMetagenomicData,
-    dendextend,
-    DT,
+    rebook, 
+    glue, 
+    sessioninfo, 
+    mia, 
+    miaTime, 
+    microbiomeDataSets, 
+    curatedMetagenomicData, 
+    ggplot2, 
+    BiocParallel, 
+    Biostrings, 
+    phyloseq, 
+    gtools, 
+    purrr, 
+    vegan, 
     fido,
-    ggpubr,
-    HDF5Array,
-    kableExtra,
-    knitr,
-    Maaslin2,
-    matrixStats,
-    mia,
-    miaViz,
-    miaTime,
-    MicrobiotaProcess,
-    MicrobiomeStat,
-    microbiomeDataSets,
+    rgl, 
+    plotly, 
+    knitr, 
+    dplyr, 
+    scales, 
+    DT, 
+    scater, 
+    bluster, 
+    patchwork, 
+    miaViz, 
+    ggsignif, 
+    pheatmap, 
+    ape, 
+    ggtree, 
+    kableExtra, 
+    dendextend, 
+    NbClust, 
+    cobiclust, 
+    biclust, 
+    ALDEx2, 
+    tidyverse, 
+    ANCOMBC, 
+    Maaslin2, 
+    MicrobiomeStat, 
+    GUniFrac, 
+    randomcoloR,
+    DirichletMultinomial, 
     mikropml,
-    MOFA2,
-    NbClust,
-    patchwork,
-    pheatmap,
-    philr,
-    picante, 
-    plotly,
-    rebook,
-    rgl,
-    rmarkdown,
-    Rtsne,
-    scater,
-    scuttle,
-    scran,
-    sechm,
-    tidyverse,
-    tidySummarizedExperiment,
-    TreeSummarizedExperiment,
-    uwot,
-    phyloseq
+    MLeval, 
+    sechm, 
+    ggpubr, 
+    stringr, 
+    ComplexHeatmap, 
+    reticulate
 Remotes:
-    cran::Cairo,
-    cran::checkmate,
-    cran::cobiclust,
-    cran::GUniFrac,
-    cran::rgl,
-    cran::biclust,
-    cran::MLeval,
-    cran::rcmdcheck,
-    github::microbiome/microbiomeDataSets,
-    github::microbiome/mia,
-    github::microbiome/miaViz,
-    github::microbiome/miaSim,        
-    github::microbiome/miaTime,
-    github::HenrikBengtsson/matrixStats,
-    github::biobakery/Maaslin2,
-    github::SchlossLab/mikropml,
-    github::jsilve24/fido    
+    github::microbiome/miaTime
 VignetteBuilder: knitr
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
+BiocType: Book
+BiocBookTemplate: 1.0.5
+SystemRequirements: quarto
