biocbook: replace `js2264` by `microbiome`

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,11 +26,12 @@ biocViews:
     Book
 Depends:
     R (>= 4.0.0)
+Imports:
+    mia
 Suggests:
     rebook, 
     glue, 
     sessioninfo, 
-    mia, 
     miaTime, 
     microbiomeDataSets, 
     curatedMetagenomicData, 
