--- a/inst/assets/_book.yml
+++ b/inst/assets/_book.yml
@@ -35,9 +35,9 @@ book:
       - icon: git
         menu:
           - text: Source Code
-            url:  https://github.com/js2264/OMA/
+            url:  https://github.com/microbiome/OMA/
           - text: Browse version `devel`
-            url:  https://js2264.github.io/OMA/docs/devel/
+            url:  https://microbiome.github.io/OMA/docs/devel/
     style: "docked"
     background: "light"
     collapse-level: 5
