Add section on network learning (#303)
* Add section on network learning

* Update section on network learning

* Update network learning chapter

Make requested changes
Remove sections on network comparison

* Add network comparison chapter

* Update book.bib

* Update chapters on network learning and comparison

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -18,6 +18,8 @@ rmd_files: ["index.Rmd",
             "21_microbiome_community.Rmd",
             "24_clustering.Rmd",
             "30_differential_abundance.Rmd",
+            "60_network_learning.Rmd",
+            "61_network_comparison.Rmd",
             "40_machine_learning.Rmd",
             "23_multi-assay_analyses.Rmd",
             "19_visualization_techniques.Rmd",
