biocbook: add `BiocBook` to `Suggests` for developers

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -76,7 +76,8 @@ Suggests:
     ggpubr, 
     stringr, 
     ComplexHeatmap, 
-    reticulate
+    reticulate,
+    BiocBook
 Remotes:
     github::microbiome/miaTime
 VignetteBuilder: knitr
