--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -77,6 +77,9 @@ Suggests:
     stringr, 
     ComplexHeatmap, 
     reticulate,
+    igraph, 
+    corpcor, 
+    circlize, 
     BiocBook
 Remotes:
     github::microbiome/miaTime
