--- a/inst/assets/_book.yml
+++ b/inst/assets/_book.yml
@@ -17,6 +17,8 @@ book:
         - pages/21_microbiome_community.qmd
         - pages/24_clustering.qmd
         - pages/30_differential_abundance.qmd
+        - pages/60_network_learning.qmd
+        - pages/61_network_comparison.qmd
         - pages/40_machine_learning.qmd
         - pages/23_multi-assay_analyses.qmd
         - pages/19_visualization_techniques.qmd
