Conversion to BiocBook (#376)
* biocbook: add GHA workflows

* biocbook: move data to extdata

* biocbook: move general/figures to inst/pages/images

* biocbook: add vignettes

* biocbook: add book assets

* biocbook: update package files

* biocbook: purge un-necessary files

* biocbook: migrate Rmd to qmd and fix xrefs

* biocbook: fix aesthetics

* biocbook: add callout acknowledging miaverse in walcome page

* biocbook: improve README to include dev/author instructions

* biocbook: replace `js2264` by `microbiome`

* Add section on network learning (#303)

* Add section on network learning

* Update section on network learning

* Update network learning chapter

Make requested changes
Remove sections on network comparison

* Add network comparison chapter

* Update book.bib

* Update chapters on network learning and comparison

* biocbook: add `BiocBook` to `Suggests` for developers

* biocbook: transfer chaps 60/61 to inst/pages/

---------

Co-authored-by: Stefanie Peschel <stefpeschel@gmail.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Description:
     This is a reference cookbook for **Microbiome Data Science** with 
     R and Bioconductor.
 License: CC BY-NC-SA 4.0
+License: CC BY-NC-SA 4.0
 Encoding: UTF-8
 URL: https://github.com/microbiome/OMA
 BugReports: https://github.com/microbiome/OMA/issues
@@ -27,84 +28,64 @@ biocViews:
 Depends:
     R (>= 4.0.0)
 Imports:
+    mia
 Suggests:
-    ALDEx2, 
-    ANCOMBC, 
-    ape, 
-    biclust, 
-    BiocBook,
-    BiocManager,
-    BiocParallel,
-    Biostrings,     
-    bluster, 
-    caret,
-    circlize, 
-    cluster,
-    cobiclust, 
-    ComplexHeatmap, 
-    corpcor,
-    cowplot, 
-    curatedMetagenomicData, 
-    dada2,
-    dendextend, 
-    devtools,
-    DirichletMultinomial,
-    dplyr,    
-    DT,
-    factoextra,
-    forcats,
-    fido,
-    ggplot2, 
-    ggpubr, 
-    ggsignif, 
-    ggtree,
-    glmnet,    
+    rebook, 
     glue, 
-    grid,
-    gsEasy,
-    GUniFrac,
-    igraph, 
-    kableExtra, 
-    knitr, 
-    Maaslin2,
-    miaViz, 
-    microbiome, 
-    microbiomeDataSets,
-    MicrobiomeStat,
-    mikropml,    
-    MLeval,
-    MMUPHin,
-    multiview,
-    NbClust,
-    patchwork,
-    pheatmap, 
+    sessioninfo, 
+    miaTime, 
+    microbiomeDataSets, 
+    curatedMetagenomicData, 
+    ggplot2, 
+    BiocParallel, 
+    Biostrings, 
     phyloseq, 
-    plotly, 
+    gtools, 
     purrr, 
-    randomcoloR,
-    RColorBrewer,
-    rebook,
-    reshape2,
-    reticulate,
-    rgl,
-    ROCR,    
-    scales,
+    vegan, 
+    fido,
+    rgl, 
+    plotly, 
+    knitr, 
+    dplyr, 
+    scales, 
+    DT, 
     scater, 
+    bluster, 
+    patchwork, 
+    miaViz, 
+    ggsignif, 
+    pheatmap, 
+    ape, 
+    ggtree, 
+    kableExtra, 
+    dendextend, 
+    NbClust, 
+    cobiclust, 
+    biclust, 
+    ALDEx2, 
+    tidyverse, 
+    ANCOMBC, 
+    Maaslin2, 
+    MicrobiomeStat, 
+    GUniFrac, 
+    randomcoloR,
+    DirichletMultinomial, 
+    mikropml,
+    MLeval, 
     sechm, 
-    sessioninfo,
-    stats,
+    ggpubr, 
     stringr, 
-    tidyverse,
-    topGO,
-    vegan
+    ComplexHeatmap, 
+    reticulate,
+    igraph, 
+    corpcor, 
+    circlize, 
+    BiocBook
 Remotes:
-    github::microbiome/mia,
-    github::microbiome/miaTime,
-    github::stefpeschel/NetCoMi,
-    github::zdk123/SpiecEasi,
-    github::GraceYoon/SPRING
+    github::microbiome/miaTime
 VignetteBuilder: knitr
-RoxygenNote: 7.3.1
+RoxygenNote: 7.2.3
 BiocType: Book
 BiocBookTemplate: 1.0.5
 SystemRequirements: quarto
