--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -80,7 +80,8 @@ Suggests:
     igraph, 
     corpcor, 
     circlize, 
-    BiocBook
+    BiocBook,
+    SuperLearner
 Remotes:
     github::microbiome/miaTime
 VignetteBuilder: knitr
