--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,6 +48,7 @@ Suggests:
     MicrobiotaProcess,
     MicrobiomeStat,
     microbiomeDataSets,
+    microbiome,
     mikropml,
     MOFA2,
     NbClust,
