--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Suggests:
     glue, 
     sessioninfo, 
     miaTime, 
-    microbiomeDataSets, 
+    microbiomeDataSets,
+    microbiome,
     curatedMetagenomicData, 
     ggplot2, 
     BiocParallel, 
