--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -81,7 +81,18 @@ Suggests:
     corpcor, 
     circlize, 
     BiocBook,
-    SuperLearner
+    SuperLearner,
+    WGCNA,
+    reshape2,
+    gsEasy,
+    topGO,
+    caret,
+    multiview,
+    glmnet,
+    forcats,
+    ROCR,
+    MMUPHin,
+    cowplot    
 Remotes:
     github::microbiome/miaTime
 VignetteBuilder: knitr
